force-app/main/default/objects/Deployment_Audit__c/Deployment_Audit__c.object-meta.xml
<CustomObject>
    <description>This object used for Deployment Audit.</description>
    <label>Deployment Audit</label>
    <nameField>
        <displayFormat>DA-{0000}</displayFormat>
        <label>Deployment Audit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment Audits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>