force-app/main/default/objects/Deployment_Audit__c/fields/Action_Date__c.field-meta.xml
<CustomField>
    <fullName>Action_Date__c</fullName>
    <description>This field used for Deployment Audit Object.</description>
    <label>Action Date</label>
    <type>DateTime</type>
</CustomField>