force-app/main/default/objects/Deployment_Audit__c/fields/Approval_Request__c.field-meta.xml
<CustomField>
    <fullName>Approval_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the audit to the Approval Request that generated it.</description>
    <label>Approval Request</label>
    <referenceTo>Approval_Request__c</referenceTo>
    <relationshipLabel>Deployment Audits</relationshipLabel>
    <relationshipName>Deployment_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>