force-app/main/default/objects/Deployment_Audit__c/fields/Deployment_Request__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Request__c</fullName>
    <description>This field used for Deployment Audit.</description>
    <label>Deployment Request</label>
    <referenceTo>Deployment_Request__c</referenceTo>
    <relationshipLabel>Deployment Audits</relationshipLabel>
    <relationshipName>Deployment_Audits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>