force-app/main/default/objects/Deployment_Audit__c/fields/Performed_By__c.field-meta.xml
<CustomField>
    <fullName>Performed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field Used by Deployment Audit Object.</description>
    <label>Performed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deployment_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>